<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/relLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image_profil"
                        android:layout_width="148dp"
                        android:layout_height="148dp"
                        android:layout_centerHorizontal="true"
                        android:elevation="7dp"
                        android:src="@drawable/melomeet_logo"
                        app:civ_border_color="@color/black"
                        app:civ_border_width="2dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/relLayout1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/white_grey_border_bottom"
                            android:paddingBottom="5dp"
                            android:text="@string/edit_profile_personnal_information"
                            android:textColor="@color/black"
                            android:textSize="25sp" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/text_input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edit_profile_name" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/text_input_firstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edit_profile_firstname" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/text_input_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edit_profile_status" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/text_input_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edit_profile_description" />
                        </android.support.design.widget.TextInputLayout>

                        <TextView
                            style="@style/TextAppearance.AppCompat.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/white_grey_border_bottom"
                            android:paddingBottom="5dp"
                            android:text="@string/edit_profile_music_information"
                            android:textColor="@color/black"
                            android:textSize="25sp" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/text_input_fav_artist"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edit_profile_fav_artist" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/text_input_fav_single"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorEnabled="true">

                            <android.support.design.widget.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/edit_profile_fav_single" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</merge>
