<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_vertical"
    android:background="@color/white"
    tools:context=".authentification.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo_melomeet"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/melomeet_logo"
        app:layout_constraintBottom_toTopOf="@id/lin_layout_email_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lin_layout_email_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:weightSum="100"
        app:layout_constraintBottom_toTopOf="@id/tv_password_forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_melomeet">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/login_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_password_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:text="Password forgot ?"
        android:textColor="@color/blue_sky"
        app:layout_constraintBottom_toTopOf="@id/lin_layout_register_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin_layout_email_password" />

    <LinearLayout
        android:id="@+id/lin_layout_register_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password_forgot">

        <Button
            android:id="@+id/tv_register"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/red_button"
            android:text="@string/login_register"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <Button
            android:id="@+id/tv_signin"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:background="@drawable/green_button"
            android:text="@string/login_sign_in"
            android:textColor="@color/white"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin_layout_register_sign_in">

        <Button
            android:id="@+id/google_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/google_button" />

        <Button
            android:id="@+id/twitter_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/twitter_button" />

        <Button
            android:id="@+id/facebook_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/facebook_button" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>